--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juliette Krief</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/gif" href="assets/images/favicon/favicon.png">
 </head>
 <body class="body">
     
