--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                 <a href="https://www.linkedin.com/in/juliettekrief/" class="socials" target="_blank" rel="noopener noreferrer">LindkedIn</a>
             </div>
             <div class="about-curriculum">
-                <h1>I’m a junior interactive designer based in paris — freshly graduated from gobelins, paris. <br>Currently looking for a new job opportunity!</a></h1>
+                <h1>I’m a junior interactive designer based in paris <br> — freshly graduated from gobelins, paris. <br>Currently looking for a new job opportunity!</a></h1>
                 <div class="cursus">
                     <div class="experiences cursus-item">
                         <h2>Work Experience</h2>
