--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                         </div>
                         <div class="experience">
                             <p class="company">freelance</p>
-                            <p class="details">Art Director and<br>Graphic Designer</p>
+                            <p class="details">Art Director and<br>Digital Designer</p>
                             <p class="years">2020 - Now</p>
                         </div>
                     </div>
