--- a/index.html
+++ b/index.html
@@ -485,14 +485,19 @@
         <div class="about-container">
             <div class="about-info">
                 <a href="mailto:juliettekrf@gmail.com">juliettekrf@gmail.com</a>
-                <p>+33 6 34 03 06 91</p>
+                <!--<p>+33 6 34 03 06 91</p>--> 
                 <a href="https://www.linkedin.com/in/juliettekrief/" class="socials" target="_blank" rel="noopener noreferrer">LindkedIn</a>
             </div>
             <div class="about-curriculum">
-                <h1>I’m an interactive designer based in paris <br> — freshly graduated from gobelins, paris. <br>Currently available for freelance!</a></h1>
+                <h1>I am an interactive designer based in Paris,<br>Currently available for freelance!</a></h1>
                 <div class="cursus">
                     <div class="experiences cursus-item">
                         <h2>Work Experience</h2>
+                        <div class="experience">
+                            <p class="company">cosmic shelter</p>
+                            <p class="details">Interactive Designer</p>
+                            <p class="years">2023 - Now</p>
+                        </div>
                         <div class="experience">
                             <p class="company">future corp</p>
                             <p class="details">Junior Digital Designer<br>in Apprenticeship</p>
